# rust-file-manage

./: Cargo.toml  README.md  git.sh
crates/lib-core/: Cargo.toml
crates/lib-core/src/middleware/: middleware.rs
crates/lib-entity/: Cargo.toml
crates/lib-entity/src/: file_path.rs
crates/lib-utils/: Cargo.toml
crates/lib-utils/src/: lib.rs
crates/lib-utils/src/file/: dir.rs  mod.rs
crates/lib-utils/src/result/: http_result.rs  mod.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240514_124957_update_file_path_table.rs  m20240514_131749_update.rs
services/web-server/: Cargo.toml
services/web-server/src/: main.rs
services/web-server/src/file_path/: file_path_params.rs  file_path_response.rs  file_path_router.rs  file_path_service.rs  mod.rs
services/web-server/src/media/: media_params.rs  media_router.rs  media_service.rs  mod.rs
services/web-server/src/system_info/: mod.rs  system_info_response.rs  system_info_router.rs  system_info_service.rs
services/web-server/src/system_info/params_response/: mod.rs  system_info_response.rs
src/: main.rs
